--- a/module03/day05/frontend/client/package.json
+++ b/module03/day05/frontend/client/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1"
